--- a/Pages/Patent.html
+++ b/Pages/Patent.html
@@ -11,34 +11,39 @@
 <h4>EVOLUTION OF PATENT SYSTEM</h4>
 <p></p>
 <ul>
-<li>•	Patents are crucial for protecting inventions, encouraging innovation, and granting exclusive rights to inventors.</li>
-<li>•	Historical milestones include the Greek colony’s chef monopoly in 500 BCE and the Statute of Anne in 1710.</li>
-<li>•	The US Patent Act of 1790 emphasized inventor’s rights, and the Paris Convention (1883) and Bern Convention (1886) laid foundations for global IP protection.</li>
-</body>
+<li>Patents are crucial for protecting inventions, encouraging innovation, and granting exclusive rights to inventors.</li>
+<li>Historical milestones include the Greek colony’s chef monopoly in 500 BCE and the Statute of Anne in 1710.</li>
+<li>The US Patent Act of 1790 emphasized inventor’s rights, and the Paris Convention (1883) and Bern Convention (1886) laid foundations for global IP protection.</li>
+<p></p>
 <h4> History of Patent Law in India</h4>
 <p></p>
-<li>•	Indian patent laws evolved from Act IV of 1856 to the Indian Patents and Designs Act of 1911.</li>
-<li>•	Post-independence, a committee under Justice Bakshi Tek Chand recommended amendments, leading to the Patents Act, 1970.</li>
-<li>•	Amendments in 1999 and 2002 addressed product patents, marking shifts in India's patent landscape.</li>
-<body>
+<ul>
+<li>Indian patent laws evolved from Act IV of 1856 to the Indian Patents and Designs Act of 1911.</li>
+<li>Post-independence, a committee under Justice Bakshi Tek Chand recommended amendments, leading to the Patents Act, 1970.</li>
+<li>Amendments in 1999 and 2002 addressed product patents, marking shifts in India's patent landscape.</li>
+</ul>
+<p></p>
 <h4>Evolution of Indian Patent System</h4>
 <p></p>
-<li>•	Legislation in 1856: Initial patent legislation aimed to encourage inventions, emphasizing disclosure of secrets.</li>
-<li>•	Legislation in 1856: Initial patent legislation aimed to encourage inventions, emphasizing disclosure of secrets.</li>
-<li>•	Consolidation in 1872: Act XIII of 1872 consolidated patent and design protection, with amendments in 1883 to protect novelty from exhibition disclosures.</li>
-<li>•	Indian Patents and Designs Act, 1911: Replaced previous acts, brought patent administration under the Controller of Patents, and saw amendments in 1920 for reciprocal arrangements with the UK.</li>
-<li>•	Post-Independence Review: Committee formed in 1949 to review the patent law, leading to the amendment of the 1911 Act in 1950, addressing working of inventions and compulsory licenses.</li>
-<li>•	1957 Committee and 1965 Bill: Justice N. Rajagopala Ayyangar Committee in 1957 recommended retention of the patent system. The Patents Bill, 1965, lapsed, but an amended bill in 1967 led to the Patents Act, 1970.</li>
-<li>•	Patents Act, 1970: Replaced the 1911 Act, remained in force for 24 years until amendments in 1999 and 2002.
-    •	Patents (Amendment) Act, 1999: Allowed filing of applications for product patents in drugs, pharmaceuticals, and agrochemicals, with examination after 31-12-2004.
-    •	Patents (Amendment) Act, 2002: Came into force in 2003, introducing new Patent Rules, 2003.
-    •	Patents (Amendment) Act, 2005: Introduced in 2005, replaced the 2004 Ordinance, bringing significant changes to the patent system.
-    </li>
+<ul>
+<li>Legislation in 1856: Initial patent legislation aimed to encourage inventions, emphasizing disclosure of secrets.</li>
+<li>Legislation in 1856: Initial patent legislation aimed to encourage inventions, emphasizing disclosure of secrets.</li>
+<li>Consolidation in 1872: Act XIII of 1872 consolidated patent and design protection, with amendments in 1883 to protect novelty from exhibition disclosures.</li>
+<li>Indian Patents and Designs Act, 1911: Replaced previous acts, brought patent administration under the Controller of Patents, and saw amendments in 1920 for reciprocal arrangements with the UK.</li>
+<li>Post-Independence Review: Committee formed in 1949 to review the patent law, leading to the amendment of the 1911 Act in 1950, addressing working of inventions and compulsory licenses.</li>
+<li>1957 Committee and 1965 Bill: Justice N. Rajagopala Ayyangar Committee in 1957 recommended retention of the patent system. The Patents Bill, 1965, lapsed, but an amended bill in 1967 led to the Patents Act, 1970.</li>
+<li>Patents Act, 1970: Replaced the 1911 Act, remained in force for 24 years until amendments in 1999 and 2002.
+<li>(Amendment) Act, 1999: Allowed filing of applications for product patents in drugs, pharmaceuticals, and agrochemicals, with examination after 31-12-2004.</li>
+<li>Patents (Amendment) Act, 2002: Came into force in 2003, introducing new Patent Rules, 2003.</li>
+<li>Patents (Amendment) Act, 2005: Introduced in 2005, replaced the 2004 Ordinance, bringing significant changes to the patent system.</li>
+</ul>
 <body>
 <h4>Key Amendments</h4>
 <p></p>
-<li>•	1950 Amendment: Addressed working of inventions and compulsory licenses.
-    •	1999 Amendment: Permitted filing of applications for certain product patents with examination post-2004.
-    •	2002 Amendment: Introduced new Patent Rules, 2003.
-    •	2005 Amendment: Brought substantial changes, replacing the 2004 Ordinance, and impacting the Indian patent landscape.
-    </li>
+<ul>
+<li>1950 Amendment: Addressed working of inventions and compulsory licenses.</li>
+<li>1999 Amendment: Permitted filing of applications for certain product patents with examination post-2004.</li>
+<li>2002 Amendment: Introduced new Patent Rules, 2003.</li>
+<li>2005 Amendment: Brought substantial changes, replacing the 2004 Ordinance, and impacting the Indian patent landscape.</li>
+</ul>
+</body>
