--- a/Pages/Patent.html
+++ b/Pages/Patent.html
@@ -47,4 +47,153 @@
 <li>2002 Amendment: Introduced new Patent Rules, 2003.</li>
 <li>2005 Amendment: Brought substantial changes, replacing the 2004 Ordinance, and impacting the Indian patent landscape.</li>
 </ul>
+<p></p>
+<h1>REGISTRATION OF PATENT</h1>
+<p></p>
+<h4>INTRODUCTION</h4>
+<p></p>
+<p>
+    In a world where cutting-edge technology rules, protecting intellectual property has become critical for creators whose works are essential to their businesses. The purpose of patents is to protect technical innovations while simultaneously honoring the original inventor’s labour of love, laborious effort, patience, and special talents. 
+</p>
+<p></p>
+<h5>The Three Main Justifications for Indian Patents: Need for registration:</h5>
+<p></p>
+<p>
+    1. Protection and Possession (Under Section 2(1)(m) of the Indian Patent Act)
+       Inventions are the foundation of corporate operations in the ever-evolving field of technology. By protecting the results of an innovator’s work from rivals in the market, patenting assures that they remain unique. The idea of proper ownership emphasizes how crucial it is to protect one’s ideas from corporate players’ tenacious pursuit.
+<p></p>
+<p>
+    2. Possibility of Monetization (Under Section 48 of the Indian Patent Act)
+       Having a patent approved allows for the creation . Among the many ways inventors might make money from their inventions are product marketing, corporate licensing, and patent sales. A patent with the right financial and strategic management may become a valuable asset.
+</p>
+<p>
+    3. Cultivating Creativity (Under Section 10(4)(d) of the Indian Patent Act)
+       In addition to acting as a barrier, the patent registration procedure stimulates innovation. This information sharing fosters an environment of ongoing innovation, enabling aspirant inventors to expand on previously developed concepts for the good of society as a whole.
+<p></p>
+<h5>Selecting the Appropriate Patent Registration Office</h5>
+<p></p>
+<p>
+    There are four jurisdictions in which the Indian Patent Office functions, each comprising certain states and union territories:
+</p>
+<p></p>
+<p>
+    1.States of Maharashtra, Gujarat, Madhya Pradesh, Goa, Chhattisgarh, and union territories of Daman & Diu and Dadra & Nagar Haveli are covered by the Mumbai Patent Office.
+</p>
+<p></p>
+<p>
+    2.	States of Andhra Pradesh, Karnataka, Kerala, Tamil Nadu, and the Union Territories of Pondicherry and Lakshadweep are covered by the Chennai Patent Office
+</p>
+<p></p>
+<p>
+    3.	States of Delhi, Haryana, Himachal Pradesh, Jammu & Kashmir, Punjab, Rajasthan, Uttar Pradesh, Uttaranchal, and the Union Territories of Chandigarh are covered by the New Delhi Patent Office.
+</p>
+<p></p>
+<p>
+    4.	India’s remaining patent offices are in Kolkata.
+</p>
+<p></p>
+<h4>Online Patent Application: A Comprehensive Guide</h4>
+<p></p>
+<p>Step 1: Search for Patents and Account Log-In</p>
+<p></p>
+<ul>
+    <li>Go to the E-Filing of Patent Applications website and use e-signing to register for an account.</li>
+    <li>To find out whether the innovation is original and to save money, you can choose to perform a patent search.</li>
+</ul>
+<p></p>
+<p>Step 2: Applying for a Patent (Under Section 7 of the Indian Patent Act)</p>
+<p></p>
+<ul>
+    <li>Including Form 2 (the patent specification form), submit the patent application using Form 1.</li>
+    <li>Add essential features that define the invention’s breadth and distinctiveness, such as claims and an abstract.</li>
+    <li>Attach the invention’s drawings and figures in PDF format.</li>
+</ul>
+<p></p>
+<p>Step 3: Declaration of Inventorship, Power of Attorney, and Statement and Undertaking (Under Indian Patent Act Section 8)</p>
+<p></p>
+<ul>
+    <li>Give an update on any other applications that have been submitted outside of India.</li>
+    <li>Send in a pledge to keep the patent controller informed regarding overseas applications.</li>
+    <li>In the event that a patent agent is assigned, provide a power of attorney in Form 26.</li>
+    <li>In Form 5, provide a statement of inventorship attesting to your actual inventorship.</li>
+</ul>
+<p></p>
+<p>Step 4: Payment of Fees</p>
+<p></p>
+<ul>
+    <li>Make the required payment through the payment channel to finish the procedure.</li>
+</ul>
+<p></p>
+<p>Step 5: Grant, Publication, and Opposition (Under Section 11B of the Indian Patent Act)</p>
+<p></p>
+<ul>
+    <li>The patent application is formally published eighteen months later.</li>
+    <li>Oppositions shall be submitted no later than three months after the date of publication.</li>
+    <li>Within 48 months after filing, address objections and requests for review.</li>
+    <li>After meeting the controller’s conditions, obtain the patent.</li>
+</ul>
+<p></p>
+<h4>Offline Patent Registration: A Conventional Method </h4>
+<p></p>
+<h5>Document Submission</h5>
+<p></p>
+<ul>
+    <li>A cover sheet with the document list should be attached.</li>
+    <li>Send in the patent grant application (Form 1 in triplicate).</li>
+    <li>Add the invention’s specification, whether it’s preliminary or comprehensive.</li>
+    <li>Give a declaration and an undertaking in support of the patent award.</li>
+    <li>If a patent agent is assigned, provide a power of attorney in Form 26.</li>
+    <li>In Form 5, provide a statement of inventorship attesting to your actual inventorship.</li>
+    <li>For further processing, remit the necessary statutory fees.</li>
+</ul>
+<p></p>
+<h4>Registration of patent under PCT </h4>
+<p></p>
+<p>
+    The Patent Cooperation Treaty (PCT), which provides a passport to acquire patent protection for ideas across several nations, emerges as a potent instrument in the changing environment of innovation. Through the expedited pathway of this international patent application procedure, applicants from the PCT Contracting States can submit applications concurrently. Let’s take an interesting journey of the PCT, where invention has no bounds and borders vanish.
+</p>
+<p></p>
+<p>
+    1. PCT Registration and Assignment
+       International patent applications filed with the national patent office or, at the applicant’s option, with the International Bureau of WIPO in Geneva are accepted by the PCT, enabling persons from the PCT Contracting States to apply. There are alternate filing alternatives with regional patent offices for applicants from certain regions, such as Europe, Africa, or Eurasia.
+</p>
+<p></p>
+<p>
+    2. Formal PCT Requirements and Worldwide Search
+       The formal conditions for overseas applications are carefully regulated by the PCT. The PCT has a significant effect upon filing as it automatically designates every Contracting State on the date of the worldwide filing. A thorough international search report and a preliminary written opinion on patentability are the outcomes of an international search carried out by qualified International Searching Authorities (ISA).
+</p>
+<p></p>
+<p>
+    3. Assessment and Publication
+       The search report and opinion are sent to applicants, who use them as a foundation for important choices. They have the option to move on with the application, withdraw, or change their claims. The worldwide application and search report are released through PATENTSCOPE and other platforms, increasing transparency, if they are not withdrawn.
+</p>
+<p></p>
+<p>
+    4. National Phase and Supplementary International Searching Authority (SISA)
+       In order to minimize surprises during the national phase, applicants have the option to obtain a Supplementary International Searching Authority (SISA) before the 22-month mark in order to undertake an extra search. After the 30th month, applicants can start the national phase, when they apply for national or regional patents.
+</p>
+<p></p>
+<p>
+    5. Preliminary International Examination Option
+       Requests for an optional international preliminary evaluation are available for those looking for further assurance and possible changes. The outcome is an international preliminary report on patentability (also known as IPRP Chapter II), which offers a solid foundation for additional legal action.
+</p>
+<p></p>
+<h5>Benefits of PCT The PCT has several benefits:</h5>
+<p></p>
+<ul>
+    <li>Extended Decision Period: Applicants are granted a further 18 months to consider international protection, designate agents, and get translations ready.</li>\
+    <li>Formal Rejection Assurance: Rejection on formal grounds is avoided during the national phase if the PCT-mandated form criteria are fulfilled.</li>
+    <li>Making Well-Informed Decisions: Written opinions and international search reports provide applicants with the ability to evaluate the likelihood of patentability.</li>
+    <li>Effective Patent Office Procedures: The written opinion and search report help national patent offices cut down on or do away with needless labor.</li>
+    <li>Fast-Track Examination: In Contracting States, PCT-PPH agreements permit rapid examination.</li>
+    <li>Worldwide Notice and Advertising: By publishing applications on PATENTSCOPE, an international audience is made aware of them, which helps in the search for possible licensees.</li>  
+</ul>
+<p></p>
+<h5>Assembly of the PCT Union and Special Measures</h5>
+<p></p>
+<p>
+    All PCT States are members of the PCT Union Assembly, which is in charge of overseeing budgets, fee schedules, and modifications. Applicants from low-income countries receive special treatment in the form of large fee discounts.   
+</p>
+<p></p>
 </body>
+
