--- a/Pages/Patent.html
+++ b/Pages/Patent.html
@@ -181,7 +181,7 @@
 <h5>Benefits of PCT The PCT has several benefits:</h5>
 <p></p>
 <ul>
-    <li>Extended Decision Period: Applicants are granted a further 18 months to consider international protection, designate agents, and get translations ready.</li>\
+    <li>Extended Decision Period: Applicants are granted a further 18 months to consider international protection, designate agents, and get translations ready.</li>
     <li>Formal Rejection Assurance: Rejection on formal grounds is avoided during the national phase if the PCT-mandated form criteria are fulfilled.</li>
     <li>Making Well-Informed Decisions: Written opinions and international search reports provide applicants with the ability to evaluate the likelihood of patentability.</li>
     <li>Effective Patent Office Procedures: The written opinion and search report help national patent offices cut down on or do away with needless labor.</li>
