--- a/Pages/Trademark.html
+++ b/Pages/Trademark.html
@@ -56,9 +56,7 @@
    <br></br>
    <h1>TESTS FOR TRADEMARK INFRINGEMENT:-</h1>
    <p></p>
-   <p>
-    1. LAPP TEST: 
-   </p>
+    <h4>1. LAPP TEST:-</h4>
    <p></p>
    <p>
     A standard test used to determine the “likelihood of confusion”. 
