--- a/Pages/PIR/PIR.html
+++ b/Pages/PIR/PIR.html
@@ -74,4 +74,46 @@
   </li>
   </li>
 </u2>
-
+<p></p>
+<h1>Designer Babies: Global Views on Ethical Gene Editing</h1>
+<p></p>
+<p>
+  In 2009, 23andMe patented a method allowing parents to select certain features in their future children, sparking ethical debates globally. 
+</p>
+<p></p>
+<p>
+  INDIA:
+</p>
+<p></p>
+<p>
+  •	India strictly restricts germ-line genetic editing, governed by National Ethical Guidelines and National Guidelines for Stem Cell Research. 
+</p>
+<p></p>
+<p>
+  USA:
+</p>
+<p></p>
+<p>
+  •	The USA, initially opposed to germ-line changes, cautiously endorsed it in specific medical cases in 2017. 
+</p>
+<p></p>
+<p>
+  UK:
+</p>
+<p></p>
+<p>
+  •	In the UK, research on embryos is permitted, but using gene-edited embryos for reproduction is prohibited. The Human Fertilisation and Embryology Authority issues licenses for gene editing research in healthy human embryos. 
+</p>
+<p></p>
+<p>
+  These nations demonstrate varied stances on germ-line editing, leading to ongoing global discussions on the ethical, legal, and societal implications of designing the next generation.
+</p>
+<p></p>
+<p>
+  For more interesting facts visit https://www.instagram.com/lawmelon/
+</p>
+<p></p>
+<p>
+  <source media="(https://www.nishithdesai.com/fileadmin/user_upload/pdfs/Research_Papers/Designer_Babies.pdf)">
+  <source media="https://www.nature.com/articles/gim2013164">
+</p>
