--- a/Pages/PIR/PIR.html
+++ b/Pages/PIR/PIR.html
@@ -114,6 +114,6 @@
 </p>
 <p></p>
 <p>
-  <source media="(https://www.nishithdesai.com/fileadmin/user_upload/pdfs/Research_Papers/Designer_Babies.pdf)">
-  <source media="https://www.nature.com/articles/gim2013164">
+  source "(https://www.nishithdesai.com/fileadmin/user_upload/pdfs/Research_Papers/Designer_Babies.pdf)"
+  source "https://www.nature.com/articles/gim2013164"
 </p>
