--- a/Pages/Trademark.html
+++ b/Pages/Trademark.html
@@ -593,3 +593,38 @@
     The Delhi High court was faced with a scenario where the defendants were using the registered tata trademark in their game. In balancing the commitments of the law under the freedom of speech and expression the court observed that the commercial or communicative intent of the speech would be considered. The court held that since the trademark was used as a method of critiquing Tata, it would not constitute trademark infringement.   
 </p>
 <p></p>
+<h1>Trademark Infringement and Passing Off</h1>
+<p></p>
+<p>
+    In the fast-paced world of business, where companies compete with one another for consumers attention, intellectual property protection is critical. Despite being legally separate, passing off and trademark infringement both seriously jeopardise the integrity and worth of your brand. Businesses may protect their well-earned goodwill and image by being aware of these ideas and their options for response. 
+</p>
+<p></p>
+<p>
+    The fundamental component of brand identification is undermined by trademark infringement, which denotes the improper use of trademarks or confusingly similar variations. The US Court of Appeals for the Sixth Circuit clarified the eight essential components of the litmus test for infringement in AWGI, LLC v. Atlas Trucking Co., LLC (2021). These consist of the mark’s strength, the products or services relatedness, the marks likeness, proof of genuine confusion, marketing channels, buyer care, the defendant's intention, and future growth.
+</p>
+<p></p>
+<p>
+    When a mark significantly imitates another without permission, that is considered direct infringement; contributory acts or vicarious control are examples of indirect infringement. The dangers of comparative advertising are highlighted by recent instances like Reckitt Benckiser India Private Limited v. Hindustan Unilever Limited (2021), which have the potential to defame rival companies and result in legal action.
+</p>
+<p></p>
+<h4>Passing Off: Upholding Unregistered Trademarks</h4>
+<p></p>
+<p>
+    In common law nations, passing off protects unregistered trademarks by preventing deception and preserving goodwill that has been built up. The ability to show how the defendant’s acts harmed the plaintiff’s reputation and commercial interests is essential to proving a passing off claim.
+</p>
+<p></p>
+<h4>Avenues for Redress: Exploring Remedial Measures</h4>
+<p></p>
+Individuals who have been wronged by trademark infringement have a variety of legal options at their disposal. 
+<p></p>
+<ul>
+    <li>Obtaining injunctions to stop infringement and pursuing damages claims are examples of civil remedies. </li>
+    <li>Criminal remedies, on the other hand, use harsh penalties, such as fines and jail time, to discourage serious violations. </li>
+    <li>By providing administrative redress, administrative remedies enable opposition filings to correct incorrect trademark registrations.</li>
+</ul>
+<p></p>
+<p>Awareness is the core of protection in the complex world of intellectual property rights. Through the skillful interpretation of trademark infringement and passing off, companies may bolster their legal defenses and protect their trademarks from unscrupulous use. Proactive steps may protect businesses from reputational damage and maintain their market position, whether negotiating the complexities of comparative advertising or suing against obvious infringements.</p>
+<p></p>
+<p>
+    In a time of constant innovation and rivalry, protecting your brand is not just wise but necessary. Accept the fundamentals of trademark law, bolster your defenses, and set out to build a brand that will last in the dynamic marketplace.
+</p>
