--- a/Pages/Patent.html
+++ b/Pages/Patent.html
@@ -195,5 +195,102 @@
     All PCT States are members of the PCT Union Assembly, which is in charge of overseeing budgets, fee schedules, and modifications. Applicants from low-income countries receive special treatment in the form of large fee discounts.   
 </p>
 <p></p>
+<h2>UNRAVELING THE MYSTERIES OF SECTION 3 & 4 OF THE INDIAN PATENT ACT</h2>
+<p></p>
+<h5>Section 3: What doesn’t make the cut as an Invention?</h5>
+<p></p>
+<p>When it comes to Patent in India not everything under the sun can be patented as invention. Section 3 of the Indian Patent Act, 1970 basically states what cannot be Patented.</p>
+<p></p>
+<h5>3 (a) Frivolous or Contrary to Natural Laws:</h5>
+<p></p>
+<p>Ever heard of perpetual motion machine? Sounds like a dream, right? Well, that’s exactly what cannot be patented – it’s scientifically impossible!!!</p>
+<p></p>
+<p>Example: A machine that claims to run forever without energy loss cannot be patented.</p>
+<p></p>
+<h5>3 (b) Contrary to public morality or health </h5>
+<p></p>
+<p>Imagine a device designed exclusively for gambling or method to clone humans. These are just not controversial but downright not patentable!!!</p>
+<p></p>
+<p>Example: Human Cloning Technique </p>
+<p></p>
+<h5>3 (c) Mere discovery of Natural Principles or Substance</h5>
+<p></p>
+<p>Discovering a scientific principle or a new type of bacteria in your backyard might earn you accolades but not a patent.</p>
+<p></p>
+<p> Example: E=mc^2 or a new mineral</p>
+<p></p>
+<h5>3 (d) New forms of known substance</h5>
+<p></p>
+<p>Found a new form of a known drug? If it doesn’t work better, it may not make the patent cut.</p>
+<p></p>
+<p>Example: Different crystallin forms of a drug without improved efficacy. </p>
+<p></p>
+<h5>3 (e) Mere Admixture</h5>
+<p></p>
+<p>Mixing two substances to get a combo with no new properties? Is a no-go for patent.</p>
+<p></p>
+<p>Example: Blend of two chemical substances that act just like a separate component. </p>
+<p></p>
+<h5>3 (f) Arrangement or Re-arrangement</h5>
+<p></p>
+<p>Simply arranging or rearranging known devices to work together doesn’t mean it is new substance, it is just the existing substance.</p>
+<p></p>
+<p>Example: Combining a fan and a heater in a single unit.</p>
+<p></p>
+<h5>3 (g) Method of Agriculture and horticulture</h5>
+<p></p>
+<p>New framing technique or gardening methods no matter how innovative, aren’t patentable.</p>
+<p></p>
+<p>Example: New method of pruning trees.</p>
+<p></p>
+<h5>3 (h) Any process for the Medicinal, Surgical, Curative, Prophylactic, Diagnostic, Therapeutic or other treatment.</h5>
+<p></p>
+<p>Medical treatment for humans and animals is excluded to ensure accessibility and public health.</p>
+<p></p>
+<p>Example: A new surgical technique.</p>
+<p></p>
+<h5>3 (i) Plants and Animals in whole or any part</h5>
+<p></p>
+<p>Biological processes, plants and animals (excluding microorganism) are kept outside the patentable domain to protect biodiversity. </p>
+<p></p>
+<p>Example: A genetically modified plant variety.</p>
+<p></p>
+<h5>3 (j) Mathematical or Business Method or a Computer Program Per Se</h5>
+<p></p>
+<p>Abstract ideas like mathematical formulas, business strategies, and standalone software programs aren’t patentable.</p>
+<p></p>
+<p>Example: An algorithm for financial trading.</p>
+<p></p>
+<h5>3 (k) Literary, Dramatic, Musical or Artistic Works</h5>
+<p></p>
+<p>Creative works are protected under Copyright law and not Patent.</p>
+<p></p>
+<p>Example: A novel, a painting or a musical composition. </p>
+<p></p>
+<h5>3 (l) Mere Scheme or Rule or Method of Performing Mental Act or Playing Game</h5>
+<p></p>
+<p>Simple Scheme or rules, like those for games or mental activities, don’t qualify as invention.</p>
+<p></p>
+<p>Example: Rules for a board game.</p>
+<p></p>
+<h5>3 (m) Presentation of Information </h5>
+<p></p>
+<p>Ways for presenting an information not matter how innovative it is it cannot be patented. </p>
+<p></p>
+<p>Example: A new format for displaying data.</p>
+<p></p>
+<h5>3 (n) Topography of integrated circuits</h5>
+<p></p>
+<p>The layout designs of Circuits are protected under Specific Law (Semiconductor Integrated Circuits Layout-Designs Act, 2000) and not under Patent Act.</p>
+<p></p>
+<p> Example: The Layout design of microchip.</p>
+<p></p>
+<h5>3 (o) Traditional Knowledge </h5>
+<p></p>
+<p>Aged-old knowledge, especially that knowns to the Indigenous Community are not considered as an Invention.</p>
+<p></p>
+<p>Example: Herbal remedies known for generations. </p>
+<p></p>
 </body>
+
 
