Commit: Patent Exclusion

--- a/Pages/Patent.html
+++ b/Pages/Patent.html
@@ -291,6 +291,8 @@
 <p></p>
 <p>Example: Herbal remedies known for generations. </p>
 <p></p>
+<p></p>
+<img src="./Patent/Patent Exclusion.png" class="Patent Exclusion">
 </body>
 
 
