--- a/Pages/Trademark.html
+++ b/Pages/Trademark.html
@@ -628,3 +628,24 @@ Individuals who have been wronged by trademark infringement have a variety of le
 <p>
     In a time of constant innovation and rivalry, protecting your brand is not just wise but necessary. Accept the fundamentals of trademark law, bolster your defenses, and set out to build a brand that will last in the dynamic marketplace.
 </p>
+<p></p>
+<h1>Australian Woolmark: Quality and Innovation</h1>
+<p></p>
+<p>The Australian Woolmark is more than just a logo; it’s a symbol of excellence in the textile industry. Introduced in 1964, this mark signifies that a product is made from pure new wool and adheres to rigorous quality standards. When you see the Woolmark, you can trust that the item has undergone extensive testing for fiber content, durability, and performance. This dedication to quality has made Woolmark a globally recognized and respected brand.</p>
+<p></p>
+<p>Innovation is at the heart of the Woolmark Company. They continuously invest in research to enhance wool's properties, making it a versatile material for modern clothing and home textiles. Whether it's creating wool that is machine washable or developing new blends that offer superior comfort and durability, the Woolmark Company ensures that wool remains relevant in today's fast-paced fashion world.</p>
+<p></p>
+<p>The Woolmark also stands for sustainability. Wool is a natural, renewable, and biodegradable fiber, and the Woolmark Company promotes sustainable farming practices. This commitment ensures that the production of wool is kind to the environment, supporting both the planet and the industry for future generations.</p>
+<p></p>
+<h4>India’s Carpet Trademark Initiative</h4>
+<p></p>
+<p>In a move to elevate the status of its handmade carpets, the Indian government is planning to grant trademarks to these exquisite creations. This initiative is designed to enhance the global competitiveness of Indian carpets and safeguard the unique craftsmanship that goes into their making. By establishing quality standards, the government will ensure that each carpet meets specific guidelines regarding materials, weaving techniques, and design authenticity. This not only guarantees a high-quality product for buyers but also protects the rich heritage of Indian carpet weaving.</p>
+<p></p>
+<p>The trademark initiative aims to curb the sale of counterfeit carpets, ensuring that consumers receive genuine pieces of art. Each region in India boasts its own distinct styles and techniques, and these trademarks will help preserve these traditional practices. This move will also significantly boost exports, giving Indian carpets a stronger presence in the international market and providing more revenue to support local artisans.</p>
+<p></p>
+<p>Sustainability is a key focus of this initiative. By promoting eco-friendly materials and production processes, the Indian government is aligning with global trends toward more sustainable textile manufacturing. The economic benefits of this plan are substantial, promising increased job opportunities and higher incomes for artisans, while also attracting more investment into the carpet sector.</p>
+<p></p>
+<p>Both the Australian Woolmark and India’s carpet trademark initiative highlight the importance of maintaining quality, authenticity, and sustainability in the textile industry. These efforts show how tradition can thrive alongside innovation, benefiting consumers, producers, and the environment alike.</p>
+<p></p>
+<img src="trademark/Trademark Indian Carpet.png"class="Trademark Indian Carpet">
+<p></p>
