--- a/Pages/PIR/PIR.html
+++ b/Pages/PIR/PIR.html
@@ -117,3 +117,26 @@
   source https://www.nishithdesai.com/fileadmin/user_upload/pdfs/Research_Papers/Designer_Babies.pdf
   source https://www.nature.com/articles/gim2013164"
 </p>
+<p></p>
+<h1>MICKEY MOUSE ENTERS PUBLIC DOMAIN: A NEW ERA OF CREATIVITY</h1>
+<p></p>
+<p>•	“Steamboat Willie” version of Mickey Mouse entered the public domain on January 1, 2024, marking a significant event in copyright law.</p>
+<p></p>
+<p>•	Despite entering the public domain, Disney’s trademark rights over Mickey Mouse allow for continued legal protection against unauthorized uses.</p>
+<p></p>
+<p>•	Mickey’s design evolved from a mischievous prankster to a heroic figure, reflecting advancements in animation and strategic brand management.</p>
+<p></p>
+<p>•	Disney’s lobbying efforts extended copyright protections, notably with the 1998 Copyright Term Extension Act, often dubbed the “Mickey Mouse Protection Act.”</p>
+<p></p>
+<p>•	Disney maintains over 2225 active patents globally, showcasing the importance of protecting and leveraging intellectual property for long-term success.</p>
+<p></p>
+<p>•	The public domain status of iconic characters like Mickey Mouse fosters creative reinterpretation and new artistic collaborations.</p>
+<p></p>
+<p>•	Similar to Mickey, the original Winnie the Pooh is public domain, but Disney’s unique portrayal remains protected, illustrating complex IP management.</p>
+<p></p>
+<p>•	Effective IP management balances protecting newer versions while leveraging the public domain status of older versions for marketing benefits.</p>
+<p></p>
+<p>•	Continuous monitoring, licensing agreements, and legal vigilance are essential for maintaining brand integrity and maximizing IP assets.</p>
+<p></p>
+<p>•	The Mickey Mouse case underscores the need for businesses to understand IP rights, innovate, and strategically manage their IP portfolios for sustainable success.</p>
+<p></p>
