commit: PIR Mickey Mouse PIR

--- a/Pages/PIR/PIR.html
+++ b/Pages/PIR/PIR.html
@@ -140,3 +140,5 @@
 <p></p>
 <p>•	The Mickey Mouse case underscores the need for businesses to understand IP rights, innovate, and strategically manage their IP portfolios for sustainable success.</p>
 <p></p>
+<img src="./Mickey Mouse.jpeg" class="Mickey Mouse">
+<p></p>
