commit & push: Patent

--- a/Pages/Patent.html
+++ b/Pages/Patent.html
@@ -294,5 +294,96 @@
 <p></p>
 <img src="./Patent/Patent Exclusion.png" class="Patent Exclusion">
 </body>
-
-
+<p></p>
+<h1> Understanding Section 25 of the Indian Patent Act 1970: Opposition to Patents</h1>
+<p></p>
+<p>Navigating the intricacies of patent law can be daunting, but it is crucial for innovators and businesses to understand how to protect their intellectual property. Section 25 of the Indian Patent Act 1970 plays a pivotal role in this regard, outlining the mechanisms for pre-grant and post-grant opposition to patents. This section offers a structured way for the public and stakeholders to challenge patent applications and granted patents, ensuring that only deserving inventions receive protection.</p>
+<p></p>
+<h3>What is Patent Opposition?</h3>
+<p></p>
+<p>Patent opposition is a formal process by which individuals or entities can challenge the validity of a patent application or a granted patent. This serves as a quality control mechanism, preventing the grant of patents that do not meet the required legal and technical standards.</p>
+<p></p>
+<h3>Pre-Grant Opposition (Section 25(1))</h3>
+<p></p>
+<p>Pre-grant opposition allows any person to oppose a patent application before it is granted. Once a patent application is filed, the details of the invention are made public. This transparency provides an opportunity for anyone to scrutinize the application and raise objections.</p>
+<p></p>
+<h3>Grounds for Pre-Grant Opposition:</h3>
+<p></p>
+<p>Opposition can be based on various grounds, such as:</p>
+<p></p>
+<p>• The invention being wrongfully obtained.</p>
+<p></p>
+<p>• Anticipation by prior publication or prior date.</p>
+<p></p>
+<p>• Prior public knowledge or public use in India.</p>
+<p></p>
+<p>• Lack of inventive step or obviousness.</p>
+<p></p>
+<p>• Non-patentable subject matter.</p>
+<p></p>
+<p>• Insufficiency in the description of the invention.</p>
+<p></p>
+<p>• Non-disclosure of required information or provision of false information.</p>
+<p></p>
+<p>• Non-filing of the patent application within 12 months in a convention country.</p>
+<p></p>
+<p>• Incorrect mention of the source of biological material.</p>
+<p></p>
+<p>• Anticipation based on traditional knowledge.</p>
+<p></p>
+<p>To file a pre-grant opposition, Form 7A must be submitted to the Indian Patent Office. Importantly, there are no fees associated with filing a pre-grant opposition, making it accessible for any member of the public to challenge potentially undeserving patent applications.</p>
+<p></p>
+<h3> Post-Grant Opposition (Section 25(2))</h3>
+<p></p>
+<p>Post-grant opposition comes into play after a patent has been granted. Unlike pre-grant opposition, only a “person interested” can file a post-grant opposition. This typically refers to individuals or entities engaged in or promoting the same field of invention.</p>
+<p></p>
+<h3>Grounds for Post-Grant Opposition:</h3>
+<p></p>
+<p>The grounds for post-grant opposition are similar to those for pre-grant opposition, including:</p>
+<p></p>
+<p>• Wrongful obtaining of the invention.</p>
+<p></p>
+<p>• Anticipation by prior publication or date.</p>
+<p></p>
+<p>• Prior claiming in India.</p>
+<P></P>
+<p>• Public knowledge or use in India.</p>
+<p></p>
+<p>• Obviousness and lack of inventive step.</p>
+<p></p>
+<p>• Non-patentable subject matter.</p>
+<p></p>
+<p>• Insufficient description.</p>
+<p></p>
+<p>• Non-disclosure of information or provision of false information.</p>
+<p></p>
+<p>• Delay in filing the patent application within the stipulated time.</p>
+<p></p>
+<p>• Incorrect source mention of biological material.</p>
+<p></p>
+<p>• Anticipation by traditional knowledge.</p>
+<p></p>
+<p>To initiate a post-grant opposition, Form 7 must be submitted along with the required statutory fees. The post-grant opposition can be filed at any time after the grant of the patent but must be within one year from the date of publication of the patent grant.</p>
+<p></p>
+<h2>Key Differences between Pre-Grant and Post-Grant Opposition</h2>
+<p></p>
+<p>1. Eligibility to File: Any person can file a pre-grant opposition, while only a “person interested” can file a post-grant opposition.</p>
+<p></p>
+<p>2. Timing: Pre-grant opposition is filed before the patent is granted, whereas post-grant opposition is filed after the patent is granted but within one year of its publication.</p>
+<p></p>
+<p>3. Fees: No fees are required for pre-grant opposition, whereas post-grant opposition requires the payment of statutory fees.</p>
+<p></p>
+<p>4. Infringement Proceedings: Infringement proceedings cannot be initiated during pre-grant opposition as the patent has not yet been granted. However, infringement proceedings can occur in the case of post-grant opposition.</p>
+<p></p>
+<p>5. Opportunity for Hearing: Section 25(1) does not explicitly provide the patent applicant an opportunity to be heard in pre-grant opposition. In contrast, post-grant opposition allows for hearings in a conventional court setting.</p>
+<p></p>
+<h2>Challenges and Considerations</h2>
+<p></p>
+<p>One significant drawback of pre-grant opposition is the potential for abuse by competitors. They can file frivolous oppositions to delay the grant of a patent, effectively shortening the effective life of the patent.</p>
+<p></p>
+<p>Despite these challenges, the opposition mechanisms under Section 25 are vital for maintaining the integrity of the patent system in India. They ensure that only inventions meeting the stringent criteria of novelty, inventive step, and industrial applicability are granted patent protection.</p>
+<p></p>
+<h2> Conclusion</h2>
+<p></p>
+<p>Understanding the opposition mechanisms under Section 25 of the Indian Patent Act 1970 is essential for anyone involved in the field of innovation and intellectual property. By providing avenues for pre-grant and post-grant opposition, the Act ensures that the patent system remains robust and fair, fostering genuine innovation while preventing the misuse of patent rights.</p>
+<p></p>
